--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2'
 volumes:
   settings:
+  iobrokerdata:
 services:
   kiosk:
     restart: always
@@ -15,13 +16,21 @@ services:
     build: ./scheduler
     privileged: true
   wifi-connect:
-    build: ./wifi-connect
     restart: always
+    build: ./wifi-connect
     network_mode: host
     privileged: true
     labels:
       io.balena.features.dbus: '1'
       io.balena.features.firmware: '1'
-  fbcp:
-    image: balenablocks/fbcp
+  iobroker:
+    restart: always
+    image: buanet/iobroker:latest
+    container_name: iobroker
+    hostname: iobroker
     privileged: true
+    ports:
+      - '8081:8081'
+      - '8087:8087'
+    volumes:
+      - 'iobrokerdata:/opt/iobroker'
