--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,6 @@ services:
     container_name: iobroker
     hostname: iobroker
     privileged: true
-    ports:
-      - '8081:8081'
-      - '8087:8087'
+    network_mode: host
     volumes:
       - 'iobrokerdata:/opt/iobroker'
