--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     restart: always
     build: ./kiosk
     privileged: true
-    ports:
-      - 8080:8080
+    network_mode: host
     volumes:
       - 'settings:/data'
   scheduler:
@@ -30,6 +29,17 @@ services:
     labels:
       io.balena.features.dbus: '1'
       io.balena.features.firmware: '1'
+  raspap:
+    restart: always
+    image: jrcichra/raspap-docker
+    container_name: raspap
+    hostname: raspap
+    privileged: true
+    network_mode: host
+    cap_add:
+      - SYS_ADMIN
+    labels:
+      io.balena.features.sysfs: '1'
   iobroker:
     restart: always
     image: buanet/iobroker:latest
@@ -50,16 +60,16 @@ services:
       - 'homeassistant:/config'
   openhab:
     restart: always
-    image: "openhab/openhab:3.0.2"
+    image: 'openhab/openhab:3.0.2'
     container_name: openhab
     hostname: openhab
     network_mode: host
     privileged: true
     volumes:
-      - "openhab_addons:/openhab/addons"
-      - "openhab_conf:/openhab/conf"
-      - "openhab_userdata:/openhab/userdata"
+      - 'openhab_addons:/openhab/addons'
+      - 'openhab_conf:/openhab/conf'
+      - 'openhab_userdata:/openhab/userdata'
     environment:
-      OPENHAB_HTTP_PORT: "8085"
-      OPENHAB_HTTPS_PORT: "8443"
-      EXTRA_JAVA_OPTS: "-Duser.timezone=Europe/Berlin"
+      OPENHAB_HTTP_PORT: '8085'
+      OPENHAB_HTTPS_PORT: '8443'
+      EXTRA_JAVA_OPTS: '-Duser.timezone=Europe/Berlin'
