--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,12 @@ services:
     build: ./wifi-connect
     network_mode: host
     privileged: true
+    cap_add:
+      - NET_ADMIN
     labels:
       io.balena.features.dbus: '1'
-      io.balena.features.firmware: '1'
+    environment:
+      DBUS_SYSTEM_BUS_ADDRESS: 'unix:path=/host/run/dbus/system_bus_socket'
   iobroker:
     restart: always
     image: buanet/iobroker:latest
