--- a/wifi-connect/Dockerfile.template
+++ b/wifi-connect/Dockerfile.template
@@ -1,6 +1,6 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
-RUN install_packages dnsmasq wireless-tools
+RUN install_packages dnsmasq wireless-tools network-manager wget
 
 WORKDIR /usr/src/app
 
